Actualizado usuario MySQL

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-      "BloodsportDatabase": "server=localhost;port=3306;user=root;password=password;database=Bloodsport"
+      "BloodsportDatabase": "server=localhost;port=3306;user=bloodsport;password=JCVD987!;database=bloodsport"
   }
 
   
